Use jet/peach to get front end information

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -20,6 +20,7 @@
   <div class="container">
     <ul class="nav nav-tabs">
 	  <li role="presentation" class="active"><a href="#/peach">Peach</a></li>
+	  <li role="presentation" ><a href="#/jet">Jet</a></li>
     </ul>
 
   <!--[if lt IE 7]>
