Fix activate tab
But still have issue because the previous page doesn't activate the correct page.

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -14,13 +14,13 @@
   <link rel="stylesheet" href="app/app.css">
   <link rel="stylesheet" href="app/d3/d3.linechart.css">
   <link rel="stylesheet" href="app/peach/peach.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-	  <li role="presentation" class="active"><a href="#/peach">Peach</a></li>
-	  <li role="presentation" ><a href="#/jet">Jet</a></li>
+	  <li><a class="aircompany-tab" href="#/peach">Peach</a></li>
+	  <li><a class="aircompany-tab" href="#/jet">Jet</a></li>
     </ul>
 
   <!--[if lt IE 7]>
@@ -31,9 +31,9 @@
   </div>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
   -->
-  <script src="https://code.jquery.com/jquery-2.2.2.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="app/app.js"></script>
