--- a/web/app/index.html
+++ b/web/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="peachApp" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="aircompanyApp" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app/app.css">
   <link rel="stylesheet" href="app/d3/d3.linechart.css">
-  <link rel="stylesheet" href="app/peach/peach.css">
+  <link rel="stylesheet" href="app/aircompany/aircompanyApp.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
   <script src="app/app.js"></script>
   <script src="app/d3/d3.angular.js"></script>
   <script src="app/d3/d3.linechart.js"></script>
-  <script src="app/peach/peach.js"></script>
+  <script src="app/aircompany/aircompany.js"></script>
 
 </body>
 </html>
